plugins {
	id 'java'
	id "io.github.liplum.mgpp" version "1.1.4"
}


tasks.withType(JavaCompile) {
	options.encoding = 'UTF-8'
	options.compilerArgs.addAll("--add-exports", "java.base/jdk.internal.reflect=ALL-UNNAMED")
	options.compilerArgs.addAll("--add-exports", "java.base/jdk.internal.misc=ALL-UNNAMED")
	options.compilerArgs.addAll("--add-exports", "java.base/jdk.internal.vm.annotation=ALL-UNNAMED")
	options.compilerArgs.addAll("--add-exports", "java.base/jdk.internal.access=ALL-UNNAMED")
	options.compilerArgs.addAll("--add-exports", "java.base/jdk.internal=ALL-UNNAMED")
	options.compilerArgs.addAll("--add-exports", "java.base/jdk.internal.loader=ALL-UNNAMED")
	options.compilerArgs.addAll("--add-exports", "java.base/jdk.internal.platform=ALL-UNNAMED")
	options.compilerArgs.addAll("--add-exports", "java.base/jdk.internal.module=ALL-UNNAMED")
}

group 'org.example'
version '1.0'
sourceSets {
	main {
		java.srcDirs = ["src"]
	}
}
targetCompatibility = 11
sourceCompatibility = 11
repositories {
	mavenCentral()
	mindustryRepo()
}
def VERSION = "1.2.3"

dependencies {
	compileOnly files(
			"libs/Mindustry_android.jar",
			"libs/libs.jar",
			"libs/Android_dalvik-1.0.jar",
	)
	implementation files(
			"libs/AndroidField.jar"
	)

	importMindustry()
}

mindustry {
	dependency {
		mindustry version: 'v141.2'
		arc version: 'v140'
	}
	client {
		official version: 'v141.2'
	}
	meta << ModMeta(
			version: VERSION
	)
	meta.displayName = "better_js"
	def name = project.archivesBaseName
	deploy {
		baseName = name
	}
	dexJar {
		options.minApi = '26'
	}

	run {
		keepOtherMods
	}
}

mindustryAssets {
	// Set the assets root
	rootAt "$projectDir/assets"
}

test {
	useJUnitPlatform()
}
